--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
 
       <div class="card">
         <img
-          src="img/casecomplique.png"
+          src="img/casecomplique.jpg"
           alt="Affiche de la pièce : Le Bourgeois Gentilhomme"
         />
         <div class="card__content"></div>
